[gd_scene load_steps=18 format=3 uid="uid://htemy10s8l38"]

[ext_resource type="Script" path="res://scripts/tile_control.gd" id="1_dh102"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_q3i1u"]
[ext_resource type="Texture2D" uid="uid://bilbhl4rgd2ws" path="res://assets/graphics/tiles/tile_vacant.svg" id="3_exdp3"]
[ext_resource type="Texture2D" uid="uid://dqt3qx62dr7lj" path="res://assets/graphics/tiles/tile_highlight.svg" id="4_da6ef"]
[ext_resource type="Texture2D" uid="uid://dnj8irw8kt3hv" path="res://assets/graphics/tiles/tile_error.svg" id="5_77hh7"]
[ext_resource type="Script" path="res://scripts/tile_map.gd" id="6_78rt2"]
[ext_resource type="Texture2D" uid="uid://7xu6hvr3hhxb" path="res://assets/graphics/tiles/tile_occupied.svg" id="6_op4q3"]
[ext_resource type="Texture2D" uid="uid://dxdw6pqxmxop3" path="res://assets/graphics/tiles/tile_ability_highlight.svg" id="7_k4a5u"]
[ext_resource type="Texture2D" uid="uid://bw0dwoyw8027d" path="res://assets/graphics/energy.svg" id="8_d4f4y"]
[ext_resource type="Texture2D" uid="uid://dagknshet5ipi" path="res://assets/graphics/energy_opponent.svg" id="9_oa8vq"]
[ext_resource type="Texture2D" uid="uid://bam6305fqe7nk" path="res://assets/graphics/background/table.png" id="11_icxqw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8h7ua"]
texture = ExtResource("3_exdp3")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_i2lwl"]
texture = ExtResource("4_da6ef")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fp8l2"]
texture = ExtResource("5_77hh7")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ip42d"]
texture = ExtResource("6_op4q3")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m0txd"]
texture = ExtResource("7_k4a5u")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8gkoc"]
tile_size = Vector2i(128, 128)
sources/0 = SubResource("TileSetAtlasSource_8h7ua")
sources/1 = SubResource("TileSetAtlasSource_i2lwl")
sources/2 = SubResource("TileSetAtlasSource_fp8l2")
sources/3 = SubResource("TileSetAtlasSource_ip42d")
sources/4 = SubResource("TileSetAtlasSource_m0txd")

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_q3i1u")

[node name="TileContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="TileContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 64

[node name="TileControl" type="Control" parent="TileContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(384, 384)
layout_mode = 2
mouse_filter = 1
script = ExtResource("1_dh102")

[node name="TileMap" type="TileMap" parent="TileContainer/MarginContainer/TileControl"]
unique_name_in_owner = true
tile_set = SubResource("TileSet_8gkoc")
rendering_quadrant_size = 8
format = 2
script = ExtResource("6_78rt2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 222.0
offset_bottom = 276.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TopLeftContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="BackToMenuButton" type="Button" parent="MarginContainer/TopLeftContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="OptionsButton" type="Button" parent="MarginContainer/TopLeftContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "OPTIONS"

[node name="OpponentDiscardPileLabel" type="Label" parent="MarginContainer/TopLeftContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 42
text = "XXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -276.0
offset_right = 144.0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BottomLeftContainer" type="VBoxContainer" parent="MarginContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HumanEnergyControl" type="Control" parent="MarginContainer2/BottomLeftContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
tooltip_text = "Your current energy.
Energy is spent on playing cards.
Energy is gained by controlling the board."
mouse_filter = 1

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer2/BottomLeftContainer/HumanEnergyControl"]
texture = ExtResource("8_d4f4y")
centered = false

[node name="HumanEnergyLabel" type="Label" parent="MarginContainer2/BottomLeftContainer/HumanEnergyControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -11.5
offset_right = 50.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "999"
horizontal_alignment = 1

[node name="HumanDrawPileLabel" type="Label" parent="MarginContainer2/BottomLeftContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 42
text = "XXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_bottom = 260.0
grow_horizontal = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TopRightContainer" type="VBoxContainer" parent="MarginContainer3"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="OpponentDrawPileLabel" type="Label" parent="MarginContainer3/TopRightContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 42
text = "XXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OpponentEnergyControl" type="Control" parent="MarginContainer3/TopRightContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
tooltip_text = "Your opponent's current energy."
mouse_filter = 1

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer3/TopRightContainer/OpponentEnergyControl"]
texture = ExtResource("9_oa8vq")
centered = false

[node name="OpponentEnergyLabel" type="Label" parent="MarginContainer3/TopRightContainer/OpponentEnergyControl"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.5
offset_top = -11.5
offset_right = 50.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 42
text = "999"
horizontal_alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -194.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="BottomRightContainer" type="VBoxContainer" parent="MarginContainer4"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HumanDiscardPileLabel" type="Label" parent="MarginContainer4/BottomRightContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 42
text = "XXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTurnButton" type="Button" parent="MarginContainer4/BottomRightContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "End your turn.
Your opponent will make their move."
focus_mode = 0
theme_override_font_sizes/font_size = 24
text = "END TURN"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
unique_name_in_owner = true
visible = false

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
scale = Vector2(2, 2)
texture = ExtResource("11_icxqw")
centered = false

[connection signal="pressed" from="MarginContainer/TopLeftContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/TopLeftContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer4/BottomRightContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
